--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <!-- <script
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRDlvJOTJYDmVsm3HKGeUjoZjgvlAxquE&libraries=places"
       async
       defer
-    ></script> -->
+    ></script>
   </head>
   <body>
     <div id="root"></div>
